fix: reject non-payable checkout before touching reservations to avoid rollback-only 500